# hypeGRL

./: .gitignore  CLAUDE.md  README.md  TODO.md  gaussian_loader.py  install_hyperdt.sh  neuroseed_loader.py  plot_gaussian_embeddings.py  plot_gaussian_embeddings_spherical.py  pyproject.toml  requirements.txt  run_gaussian_benchmark.py  run_gaussian_experiments.sh  run_neuroseed_benchmark.py  snap_dataset_loader.py  test_gaussian_knn.sh  train_and_plot_embeddings.py
docs/: index.rst
docs/api/: embedders.rst  unknown_edges.rst
docs/background/: encoder_decoder.rst  hyperbolic_geometry.rst
docs/methods/: ase.rst  dmercator.rst  dmercator_pseudocode.md  hydra.rst  hypermap.rst  hypermap_pseudocode.md  lorentz.rst  poincare_embeddings.rst  poincare_maps.rst
docs/tutorials/: evaluation.ipynb  graph_generation.ipynb  hypermap_tree_vs_powerlaw.ipynb  poincare_vs_lorentz.ipynb  quickstart.ipynb  streaming.ipynb  unknown_edges.ipynb
experiments/: README.md  __init__.py  datasets.py  graph_stats.py  link_prediction_experiment.py  representation_comparison.py  requirements.txt
experiments/data/single_cell/: README.md
hypegrl/embedders/: __init__.py  _dmercator_init.py  _hypermap_init.py  base.py  dmercator.py  hydra.py  hydra_plus.py  hypermap.py  lorentz_embeddings.py  poincare_embeddings.py  poincare_maps.py
hypegrl/evaluation/: __init__.py  classification.py  link_prediction.py  ranking.py
hypegrl/inference/: __init__.py  imputation.py  joint_optimizer.py  parameters.py  riemannian_optimizer.py
hypegrl/manifolds/: conversions.py  lorentz.py  poincare.py  polar.py
hypegrl/representations/: __init__.py  ball.py  base.py  hyperboloid.py  polar.py
hypegrl/visualization/: __init__.py  disk.py  polar.py
models/: poincare_maps_model.py
test/other/: compare_embeddings.py  hyperbolic_knn.py  run.sh  run_comparison.sh
test/tree_test/: link_prediction.py  load_and_compare_embeddings.py
tests/: test_charts.py  test_dmercator_cpp_equivalence.py  test_embedders.py  test_evaluation.py  test_experiments.py  test_hypermap_cpp_equivalence.py  test_inference.py  test_parameters.py  test_representations.py  test_representations_exact_polar.py  test_visualization.py
tests/fixtures/dmercator_cpp/: README.md  balanced_tree_d1.inf_coord  karate_d1.inf_coord  karate_d2.inf_coord  openflights_d1.edge  openflights_d1.inf_coord
tests/fixtures/hypermap_cpp/: README.md  generate_fixtures.py  karate_T0.3.txt  karate_T0.5.txt  (+1 more)
utils/: geometric_conversions.py
